個人情報の労働条件属性削除によりとりあえずソースをコメントにする